feat: update DoctorEntityMapper and DoctorMapper to handle clinic associations